# texttool

./: Cargo.toml  LICENSE  Makefile  README.md
.githooks/: post-commit  pre-commit
examples/: patterns.toml
raycast/: README.md  clean-text.sh  extract-info.sh  title-case.sh  transform-text.sh
scripts/: install.sh  release.sh  setup-hooks.sh
src/: acronyms.rs  casing.rs  cli.rs  io.rs  main.rs  patterns.rs  registry.rs  spellcheck.rs  transform.rs
src/transforms/: case.rs  clean.rs  extract.rs  humanize.rs  identifier.rs  mock.rs  mod.rs  replace.rs  slug.rs  squeeze.rs  strip.rs  titlecase.rs  unslug.rs
